--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "formik": "^2.4.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "nookies": "^2.5.2",
@@ -19,7 +20,10 @@
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8",
+    "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
