--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "dotenv": "^16.4.7",
+    "firebase": "^11.2.0",
     "formik": "^2.4.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
